# machina-demo

./: .env.json.example  .eslintrc  .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  Pipfile  README.rst  asgi.py  gulpfile.babel.js  manage.py  package-lock.json  package.json  pyproject.toml  requirements.freeze  wsgi.py
.provisioning/: deploy.yml  inventory  inventory_lxdock
.provisioning/group_vars/: prod.yml  target_lxdock.yml  target_realthing.yml
.provisioning/vars/: project.yml  secrets.yml
main/common/: viewmixins.py
main/presentation/: urls.py
main/presentation/account/: forms.py  urls.py  views.py
main/public/: urls.py
main/static/less/: App.less
main/templates/: board_base.html
main/templates/forum/: index.html
main/templates/registration/: base_account.html  login.html  parameters.html  password.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html  unregister.html
project/: urls.py
project/settings/: base.py  dev.py  production.py
vanilla/public/: urls.py
vanilla/public/account/: urls.py  views.py
vanilla/static/less/: App.less
vanilla/templates/: board_base.html
vanilla/templates/forum/: index.html
vanilla/templates/registration/: base_account.html  login.html  password.html  password_reset_form.html  unregister.html
vanilla_project/: urls.py
vanilla_project/fixtures/: forums.json  members.json  permissions.json  polloptions.json  polls.json  posts.json  topics.json
vanilla_project/settings/: base.py  dev.py
(+7 files in other folders)
