[tool.poetry]
name = "machina-demo"
description = "Demo project for django-machina."
authors = ["Morgan Aubert <me@morganaubert.name>"]

# This project is not intended to be published on Pypi, thus publishing is disabled.
version = "0.0.0"
classifiers = ["Private :: Do Not Upload"]
exclude = ["*"]

[tool.poetry.dependencies]
python = "^3.8"

django = "^3.0"
django-haystack = "^3.0b1"
django-machina = "*"
django-recaptcha = "*"
psycopg2 = "*"
whoosh = "*"
uvicorn = "^0.11.3"
sentry-sdk = "*"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"
flake8 = "*"
ipython = "*"
isort = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
